fix: Increase contrast for button

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -169,8 +169,8 @@ h5 {
 
 .btn-primary {
 	filter: saturate(90%);
-	background-color: #0070f4;
-	border-color: #0070f4;
+	background-color: #0055ba;
+	border-color: #0055ba;
 }
 
 .badge-success {
